templates/boinc-client_template.yaml
---
# Source: boinc-client/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-boinc-client
  labels:
    helm.sh/chart: boinc-client-0.1.3
    app.kubernetes.io/name: boinc-client
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.12.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 31416
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: boinc-client
    app.kubernetes.io/instance: release-name
---
# Source: boinc-client/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-boinc-client
  labels:
    helm.sh/chart: boinc-client-0.1.3
    app.kubernetes.io/name: boinc-client
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.12.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: boinc-client
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: boinc-client
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      containers:
      - name: release-name-boinc-client
        image: "boinc/client:arm32v7"
        imagePullPolicy: IfNotPresent
        args: [--pid=host --net=host]
        command: [start-boinc.sh]
        ports:
        - name: http
          containerPort: 31416
          protocol: TCP
        volumeMounts:
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
---
# Source: boinc-client/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-boinc-client
  labels:
    helm.sh/chart: boinc-client-0.1.3
    app.kubernetes.io/name: boinc-client
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.12.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.1.0/24
spec:
  rules:
    - host: "boinc-client.192.168.1.203.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-boinc-client
                port:
                  number: 31416
